--- a/_config.yml
+++ b/_config.yml
@@ -203,13 +203,13 @@ defaults:
       share: true
       related: true
   # _pages
-  #- scope:
-  #    path: ""
-  #    type: pages
-  #  values:
-  #    layout: single
-  #    author_profile: true
-  # _teaching
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+   _teaching
   - scope:
       path: ""
       type: teaching
@@ -228,22 +228,22 @@ defaults:
       share: true
       comments: true
   # _portfolio
-  #- scope:
-  #    path: ""
-  #    type: portfolio
-  #  values:
-  #    layout: single
-  #    author_profile: true
-  #    share: true
-  #    comment: true
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true
   # _talks
-  #- scope:
-  #    path: ""
-  #    type: talks
-  #  values:
-  #    layout: talk
-  #    author_profile: true
-  #    share: true
+  - scope:
+      path: ""
+      type: talks
+    values:
+     layout: talk
+      author_profile: true
+      share: true
 
 # Sass/SCSS
 sass:
